--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="padam-modified.png" alt="Padam's profile picture" width="250" 
+            <td><img src="Images/padam-modified.png" alt="Padam's profile picture" width="250" 
                 height="250"></td>
             <td><h1><br>Padam Mantry</h1>
                 <p><i><br>First Year Student at <strong><a href="http://www.iiitsurat.ac.in/">IIIT Surat</a></strong>.</i></p>
